--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start": "NODE_ENV=production node dist/index.js",
     "check": "tsc",
     "db:push": "drizzle-kit push",
-    "db:migrate": "tsx server/run-migration.ts"
+    "db:migrate": "tsx server/run-migration.ts",
+    "db:fix-upgrades": "tsx server/run-userupgrades-fix.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
