--- a/package.json
+++ b/package.json
@@ -44,9 +44,11 @@
     "@radix-ui/react-toggle": "^1.1.3",
     "@radix-ui/react-toggle-group": "^1.1.3",
     "@radix-ui/react-tooltip": "^1.2.0",
+    "@react-native/debugger-frontend": "^0.82.1",
+    "@react-native/debugger-shell": "^0.82.1",
     "@supabase/supabase-js": "^2.74.0",
-    "@storybook/react": "^10.0.0",
-    "storybook/addon-essentials": "^8.6.14",
+    "@storybook/react": "^8.6.14",
+    "@storybook/addon-essentials": "^8.6.14",
     "@tanstack/react-query": "^5.60.5",
     "@types/memoizee": "^0.4.12",
     "@types/multer": "^2.0.0",
@@ -90,7 +92,7 @@
     "react-icons": "^5.4.0",
     "react-resizable-panels": "^2.1.7",
     "recharts": "^2.15.2",
-    "storybook": "^10.0.0",
+    "storybook": "^8.6.14",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "telegraf": "^4.16.3",
@@ -114,7 +116,7 @@
     "@types/express": "4.17.21",
     "@types/express-session": "^1.18.0",
     "@types/jsonwebtoken": "^9.0.10",
-    "@types/node": "^20.19.0",
+    "@types/node": "^20.19.4",
     "@types/passport": "^1.0.16",
     "@types/passport-local": "^1.0.38",
     "@types/pg": "^8.15.5",
